# vook_db_v7

./: .gitignore  README.md  load_spot.sh  main.py  pyproject.toml  rakuten_api_call_bulk_from_table.py
log/20231119/: log_20231119134759.txt  log_20231119135328.txt
notebook/: get_info_necessary_for_api_query_from_prd_db.ipynb  get_yahoo_data.ipynb  put_to_devDB.ipynb  rakuten_api_call.ipynb  rakuten_api_call_bluk_from_table.ipynb  rakuten_api_call_bulk.ipynb  rakuten_api_call_bulk_from_csv.ipynb  rakuten_api_call_bulk_from_table.ipynb  rakuten_api_call_bulk_from_table.py  rakuten_api_call_koga.ipynb  yahoo_api_call_dev.ipynb
tests/: test_vook_db_v7.py
vook_db_v7/: config.py  get_rakuten_data.py  get_yahoo_data.py  rakuten_api_call.py
