[tool.poetry]
name = "vook_db_v7"
version = "0.1.0"
description = ""
authors = ["atsushimemet <noap3b69n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
requests = "^2.31.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
black = "^23.7.0"
jupyterlab = "^4.0.5"
jupyterlab-code-formatter = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
